--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,7 @@
 {
   "hosting": {
     "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+    "site": "adrian-dabek-resume",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
 }
